# es-orchestrator-mcp

./: .env.example  LICENSE  README.md  config.py  nt_helper_proxy.py  nt_metadata.py  orchestrator.py  pyproject.toml  server.py
data/: nt_algorithms.json
scripts/: update_algorithms.py
